--- a/bty.html
+++ b/bty.html
@@ -280,8 +280,14 @@
 
     <div class="background-photos">
         <img src="C:\Users\User\OneDrive\Documents\bt\WhatsApp Image 2025-09-18 at 10.57.28_bcb34c41.jpg"   id="photo1"/>
-        <img src="C:\Users\User\OneDrive\Documents\birthday\birth\WhatsApp Image 2025-09-11 at 01.41.59_f205172b.jpg" id="photo2"/>
-        <img src="C:\Users\User\OneDrive\Documents\birthday\birth\WhatsApp Image 2025-09-11 at 01.41.58_f7a651db.jpg" id="photo3"/>
+        <img src="C:\Users\User\OneDrive\Documents\bt\WhatsApp Image 2025-09-11 at 01.41.58_f7a651db.jpg"   id="photo2"/>
+        <img src="C:\Users\User\OneDrive\Documents\bt\WhatsApp Image 2025-09-11 at 01.41.59_f205172b.jpg"   id="photo3"/>
+        <img src="C:\Users\User\OneDrive\Documents\bt\WhatsApp Image 2025-09-13 at 21.14.59_84cea2a6.jpg"   id="photo4"/>
+        <img src="C:\Users\User\OneDrive\Documents\bt\WhatsApp Image 2025-09-13 at 21.22.05_6b910a65.jpg"   id="photo5"/>
+        <img src="C:\Users\User\OneDrive\Documents\bt\WhatsApp Image 2025-09-13 at 21.22.06_2ba3ed83.jpg"   id="photo6"/>
+        <img src="C:\Users\User\OneDrive\Documents\bt\WhatsApp Image 2025-09-18 at 10.57.28_bcb34c41.jpg"   id="photo7"/>
+        <img src="C:\Users\User\OneDrive\Documents\birthday\birth\WhatsApp Image 2025-09-11 at 01.41.59_f205172b.jpg" id="photo8"/>
+        <img src="C:\Users\User\OneDrive\Documents\birthday\birth\WhatsApp Image 2025-09-11 at 01.41.58_f7a651db.jpg" id="photo9"/>
         <img src="C:\Users\User\OneDrive\Documents\birthday\birth\WhatsApp Image 2025-09-11 at 01.41.58_9cff7475.jpg" id="photo4"/>
     </div>
 
